# StockBot

./: .gitignore  BACKLOG.md  DECISION_LOG.md  KB_INDEX.md  Makefile  README.md  alembic.ini  package-lock.json  pyproject.toml  ruff.toml
Frontend Development for StockBot App (Rebuild)/: Activities.tsx  Assets.tsx  Calendar.tsx  EmptyState.tsx  IntelligenceCenter.tsx  Layout.tsx  Orders.tsx  Portfolio.tsx  RefreshBadge.tsx  SectionHeader.tsx  ShadowTrades.tsx  Sidebar.tsx  TopBar.tsx  append_css.py  append_css2.py  format.ts  index.css  router.tsx  vite.config.ts  write_pages.py
docs/: ARCH_INTEGRATION_ALPACA_TAILSCALE.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_PLAN_V01.md  IMPLEMENTATION_STATUS.md  INTELLIGENCE_AND_AI_REFEREE.md  LIFECYCLE_COMPLETION_SUMMARY.md  MULTI_STRATEGY_SUMMARY.md  OPS_RUNBOOK_TAILSCALE_SSH.md  PREMARKET_OPERATOR_RUNBOOK.md  RELEASE_ACCEPTANCE_CHECKLIST.md  SCRAPPY_IMPLEMENTATION.md  SCRAPPY_INTEGRATION.md  STRATEGY_AUDIT.md  STRATEGY_CATALOG.md  TEST_PLAN_V01.md  UI_CLEANUP_SUMMARY.md  UI_TRUTH_AUDIT.md  UI_TRUTH_IMPLEMENTATION_SUMMARY.md  VALIDATION_RUNBOOK.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
infra/: .env.example  Dockerfile.app  Dockerfile.gateway  Dockerfile.ui  Dockerfile.validate  compose.test.yaml  compose.yaml  nginx-ui.conf
migrations/: env.py
replay/: README.md
scripts/: compose.sh  docker_context_um790.sh  ensure_infra.sh  paper_lifecycle_validate.sh  premarket_validate.sh  release_gate.sh  replay_diff.py  run_replay.py  (+8 more)
(+221 files in other folders)
