[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockbot"
version = "0.1.0"
description = "v0.1 Alpaca market data + paper trading, Tailscale SSH deploy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=14",
    "redis>=5",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[project.scripts]
alpaca_market_gateway = "alpaca_market_gateway.main:main"
alpaca_trade_gateway = "alpaca_trade_gateway.main:main"
alpaca_reconciler = "alpaca_reconciler.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
